--- a/_includes/bio.html
+++ b/_includes/bio.html
@@ -1,15 +1,9 @@
 <section id="bio">
-  <section id="img-wrapper">
-    <!--<img src="{{site.data.author.dp}}" alt="" />-->
-  </section>
-  <section id="bio-wrapper">
-    <div id="text-wrapper">{{site.data.author.description}}</div>
-    <div id="social-wrapper">
-      {% for i in site.data.author.contact %}
-      <a href="{{i.url}}" target="_blank">
-        <img src="{{site.baseurl}}/assets/icons/{{i.title}}.png" alt="" />
-      </a>
-      {%endfor%}
-    </div>
-  </section>
+  <div id="bio-avatar-wrapper">
+    <img src="{{site.data.author.dp}}" alt="Avatar missing" id="bio-avatar" />
+  </div>
+
+  <div id="bio-text">{{site.data.author.description}}</div>
 </section>
+
+{% include social-links.html %}
