--- a/_includes/bio.html
+++ b/_includes/bio.html
@@ -1,6 +1,6 @@
 <section id="bio">
   <div id="bio-avatar-wrapper">
-    <img src="{{site.data.author.dp}}" alt="Avatar missing" id="bio-avatar" />
+    <!--<img src="{{site.data.author.dp}}" alt="Avatar missing" id="bio-avatar" />-->
   </div>
 
   <div id="bio-text">{{site.data.author.description}}</div>
